--- a/partials/courses.students.html
+++ b/partials/courses.students.html
@@ -1,4 +1,4 @@
-<div ng-show="courses.students.length">
+<div ng-show="course.students.length">
   <h2>Student List for {{ course.name }}</h2>
   <ul>
     <li ng-repeat="item in course.students">
